# stm32-xep

./: .gitignore  CMakeLists.txt  arm-toolchains.cmake
src/: CMakeLists.txt
src/xtMCU/stm32f767igtx/: FreeRTOSConfig.h  board.h  hardware_spec.cmake  stm32f767igtx.ioc
src/xtMCU/stm32f767igtx/XEP_HAL/: gpio_wrapper.h  xtio_led.c  xtio_led.h
src/xtSerial/src/: protocol.c  protocol.h  protocol_host_parser.c  protocol_host_parser.h  protocol_parser.c  protocol_parser.h  protocol_target.c  protocol_target.h  xtserial_definitions.h
src/xtXEP/include/: memorypoolset.h  module_ui.h  x4driver.h  xep.h  xep_dispatch.h  xep_dispatch_messages.h  xep_hal.h  xtfile.h  xtmemory.h
